Now there is a function to create cubes

--- a/Sol Lewitt 122.ipynb
+++ b/Sol Lewitt 122.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,8 +40,83 @@
     }
    ],
    "source": [
+    "# Cube with no sticks\n",
     "cube = np.zeros((3,4))\n",
     "print (cube)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cube=np.array([1,2,3,4,5,6,7,8,9,10,11,12])\n",
+    "print(cube)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cube.reshape((3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ok lets make a function that given a list of indexes creates a cube with 1's (edges) on those indexes\n",
+    "def create_cube(edge_list):\n",
+    "    cube = np.zeros(12)\n",
+    "    for index in edge_list:\n",
+    "        cube[index]=1\n",
+    "    cube=cube.reshape((3,4))\n",
+    "    return cube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cube = create_cube([2,4])"
    ]
   },
   {
