Now it can generate all cubes with repetitions

--- a/Sol Lewitt 122.ipynb
+++ b/Sol Lewitt 122.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Boring but neccesary inputs\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from itertools import combinations "
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -59,13 +60,13 @@
     }
    ],
    "source": [
-    "cube=np.array([1,2,3,4,5,6,7,8,9,10,11,12])\n",
+    "cube = np.array([1,2,3,4,5,6,7,8,9,10,11,12])\n",
     "print(cube)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +77,7 @@
        "       [ 9, 10, 11, 12]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,21 +103,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cube = create_cube([2,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's see if we can list all the cubes with two edges\n",
+    "comb = combinations(list(range(12)), 2) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]]\n"
+      "(0, 1)\n",
+      "(0, 2)\n",
+      "(0, 3)\n",
+      "(0, 4)\n",
+      "(0, 5)\n",
+      "(0, 6)\n",
+      "(0, 7)\n",
+      "(0, 8)\n",
+      "(0, 9)\n",
+      "(0, 10)\n",
+      "(0, 11)\n",
+      "(1, 2)\n",
+      "(1, 3)\n",
+      "(1, 4)\n",
+      "(1, 5)\n",
+      "(1, 6)\n",
+      "(1, 7)\n",
+      "(1, 8)\n",
+      "(1, 9)\n",
+      "(1, 10)\n",
+      "(1, 11)\n",
+      "(2, 3)\n",
+      "(2, 4)\n",
+      "(2, 5)\n",
+      "(2, 6)\n",
+      "(2, 7)\n",
+      "(2, 8)\n",
+      "(2, 9)\n",
+      "(2, 10)\n",
+      "(2, 11)\n",
+      "(3, 4)\n",
+      "(3, 5)\n",
+      "(3, 6)\n",
+      "(3, 7)\n",
+      "(3, 8)\n",
+      "(3, 9)\n",
+      "(3, 10)\n",
+      "(3, 11)\n",
+      "(4, 5)\n",
+      "(4, 6)\n",
+      "(4, 7)\n",
+      "(4, 8)\n",
+      "(4, 9)\n",
+      "(4, 10)\n",
+      "(4, 11)\n",
+      "(5, 6)\n",
+      "(5, 7)\n",
+      "(5, 8)\n",
+      "(5, 9)\n",
+      "(5, 10)\n",
+      "(5, 11)\n",
+      "(6, 7)\n",
+      "(6, 8)\n",
+      "(6, 9)\n",
+      "(6, 10)\n",
+      "(6, 11)\n",
+      "(7, 8)\n",
+      "(7, 9)\n",
+      "(7, 10)\n",
+      "(7, 11)\n",
+      "(8, 9)\n",
+      "(8, 10)\n",
+      "(8, 11)\n",
+      "(9, 10)\n",
+      "(9, 11)\n",
+      "(10, 11)\n"
      ]
     }
    ],
    "source": [
-    "cube = create_cube([2,4])"
+    "for item in comb:\n",
+    "    print (item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(comb))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cubes_with_n_edges(n_edges):\n",
+    "    comb = combinations(list(range(12)), n_edges) \n",
+    "    n_cubes = len(list(comb))\n",
+    "    return n_cubes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "12\n",
+      "66\n",
+      "220\n",
+      "495\n",
+      "792\n",
+      "924\n",
+      "792\n",
+      "495\n",
+      "220\n",
+      "66\n",
+      "12\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n_edges in range(13):\n",
+    "    print(cubes_with_n_edges(n_edges))"
    ]
   },
   {
@@ -124,7 +270,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "\n",
+    "So this works with a lot of duplication\n",
+    "\n",
+    "To do list:\n",
+    "\n",
+    "* Function to generate all rigid transformations\n",
+    "\n",
+    "* Function to transfor cube into graph to check for connectedness\n",
+    "\n",
+    "* Function to to check if cube is 3D\n",
+    "\n",
+    "* Optional Function to generate an actual picture of the cube possibly using povray\n",
+    "\n",
+    "'''\n"
+   ]
   }
  ],
  "metadata": {
