Same functionality as before but better organized

--- a/Sol Lewitt 122.ipynb
+++ b/Sol Lewitt 122.ipynb
@@ -9,13 +9,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Boring but neccesary inputs\n",
     "import numpy as np\n",
     "from itertools import combinations "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_cube(edge_list):\n",
+    "    '''\n",
+    "\n",
+    "    function that given a list of indexes creates a cube representation\n",
+    "    3x4 matrix with 1's (edges) on those indexes\n",
+    "\n",
+    "    input:\n",
+    "            edge_list: List of indexes where an edge exists\n",
+    "    output:\n",
+    "            cube: 3x4 matrix representing the cube with edges specified in edge_list\n",
+    "            \n",
+    "    '''\n",
+    "    cube = np.zeros(12)\n",
+    "    for index in edge_list:\n",
+    "        cube[index] = 1\n",
+    "    cube = cube.reshape((3,4))\n",
+    "\n",
+    "    return cube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cubes_with_n_edges(n_edges):\n",
+    "    '''\n",
+    "    \n",
+    "    This function returns a list of all possible cubes that have n_edges \n",
+    "    (losts of repetitions though)\n",
+    "    \n",
+    "    input:\n",
+    "            n_edges: Number of existing edges\n",
+    "    output:\n",
+    "            cube_list: List of all possible cubes with n_edges\n",
+    "    '''\n",
+    "    \n",
+    "    comb = combinations(list(range(12)), n_edges)\n",
+    "    cube_list = []\n",
+    "    for item in comb:\n",
+    "        cube_list.append(create_cube(item))\n",
+    "        \n",
+    "    return cube_list"
    ]
   },
   {
@@ -27,242 +79,365 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
+      "[[0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0.]\n",
       " [0. 0. 0. 0.]]\n"
      ]
     }
    ],
    "source": [
-    "# Cube with no sticks\n",
-    "cube = np.zeros((3,4))\n",
-    "print (cube)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1  2  3  4  5  6  7  8  9 10 11 12]\n"
-     ]
-    }
-   ],
-   "source": [
-    "cube = np.array([1,2,3,4,5,6,7,8,9,10,11,12])\n",
+    "# How to use the create_cube function\n",
+    "cube = create_cube([2,4])\n",
     "print(cube)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  2,  3,  4],\n",
-       "       [ 5,  6,  7,  8],\n",
-       "       [ 9, 10, 11, 12]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cube.reshape((3,4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ok lets make a function that given a list of indexes creates a cube with 1's (edges) on those indexes\n",
-    "def create_cube(edge_list):\n",
-    "    cube = np.zeros(12)\n",
-    "    for index in edge_list:\n",
-    "        cube[index]=1\n",
-    "    cube=cube.reshape((3,4))\n",
-    "    return cube"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cube = create_cube([2,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let's see if we can list all the cubes with two edges\n",
-    "comb = combinations(list(range(12)), 2) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 1)\n",
-      "(0, 2)\n",
-      "(0, 3)\n",
-      "(0, 4)\n",
-      "(0, 5)\n",
-      "(0, 6)\n",
-      "(0, 7)\n",
-      "(0, 8)\n",
-      "(0, 9)\n",
-      "(0, 10)\n",
-      "(0, 11)\n",
-      "(1, 2)\n",
-      "(1, 3)\n",
-      "(1, 4)\n",
-      "(1, 5)\n",
-      "(1, 6)\n",
-      "(1, 7)\n",
-      "(1, 8)\n",
-      "(1, 9)\n",
-      "(1, 10)\n",
-      "(1, 11)\n",
-      "(2, 3)\n",
-      "(2, 4)\n",
-      "(2, 5)\n",
-      "(2, 6)\n",
-      "(2, 7)\n",
-      "(2, 8)\n",
-      "(2, 9)\n",
-      "(2, 10)\n",
-      "(2, 11)\n",
-      "(3, 4)\n",
-      "(3, 5)\n",
-      "(3, 6)\n",
-      "(3, 7)\n",
-      "(3, 8)\n",
-      "(3, 9)\n",
-      "(3, 10)\n",
-      "(3, 11)\n",
-      "(4, 5)\n",
-      "(4, 6)\n",
-      "(4, 7)\n",
-      "(4, 8)\n",
-      "(4, 9)\n",
-      "(4, 10)\n",
-      "(4, 11)\n",
-      "(5, 6)\n",
-      "(5, 7)\n",
-      "(5, 8)\n",
-      "(5, 9)\n",
-      "(5, 10)\n",
-      "(5, 11)\n",
-      "(6, 7)\n",
-      "(6, 8)\n",
-      "(6, 9)\n",
-      "(6, 10)\n",
-      "(6, 11)\n",
-      "(7, 8)\n",
-      "(7, 9)\n",
-      "(7, 10)\n",
-      "(7, 11)\n",
-      "(8, 9)\n",
-      "(8, 10)\n",
-      "(8, 11)\n",
-      "(9, 10)\n",
-      "(9, 11)\n",
-      "(10, 11)\n"
+      "Number of edges:  0 Number of cubes:  1 \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "Number of edges:  1 Number of cubes:  12 \n",
+      "\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]] \n",
+      "\n",
+      "Number of edges:  2 Number of cubes:  66 \n",
+      "\n",
+      "[[1. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[1. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[1. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[1. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]] \n",
+      "\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]] \n",
+      "\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]] \n",
+      "\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]] \n",
+      "\n",
+      "[[0. 1. 1. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 1. 0. 1.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 1. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 1. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]] \n",
+      "\n",
+      "[[0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]] \n",
+      "\n",
+      "[[0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]] \n",
+      "\n",
+      "[[0. 0. 1. 1.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 1. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 1. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 1. 0.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]] \n",
+      "\n",
+      "[[0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]] \n",
+      "\n",
+      "[[0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 1.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 1.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 1.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [1. 1. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [1. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [1. 0. 0. 1.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 1. 1. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 1. 0. 1.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [1. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 1. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 1. 1.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 1. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 1. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 1.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 1. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 0. 1. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [0. 0. 0. 1.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [1. 1. 0. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [1. 0. 1. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [1. 0. 0. 1.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 1. 1. 0.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 1. 0. 1.]] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 1. 1.]] \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for item in comb:\n",
-    "    print (item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "66"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(list(comb))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cubes_with_n_edges(n_edges):\n",
-    "    comb = combinations(list(range(12)), n_edges) \n",
-    "    n_cubes = len(list(comb))\n",
-    "    return n_cubes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "12\n",
-      "66\n",
-      "220\n",
-      "495\n",
-      "792\n",
-      "924\n",
-      "792\n",
-      "495\n",
-      "220\n",
-      "66\n",
-      "12\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "for n_edges in range(13):\n",
-    "    print(cubes_with_n_edges(n_edges))"
+    "for n_edges in range(3):\n",
+    "    cube_list = cubes_with_n_edges(n_edges)\n",
+    "    print ('Number of edges: ', n_edges, 'Number of cubes: ', len(cube_list), '\\n')\n",
+    "    for item in cube_list:\n",
+    "        print(item, '\\n')"
    ]
   },
   {
@@ -281,7 +456,7 @@
     "\n",
     "* Function to transfor cube into graph to check for connectedness\n",
     "\n",
-    "* Function to to check if cube is 3D\n",
+    "* Function to to check if structure is 3D\n",
     "\n",
     "* Optional Function to generate an actual picture of the cube possibly using povray\n",
     "\n",
@@ -305,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
