--- a/Sol Lewitt 122.ipynb
+++ b/Sol Lewitt 122.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "            cube: 3x4 matrix representing the cube with edges specified in edge_list\n",
     "            \n",
     "    '''\n",
-    "    cube = np.zeros(12)\n",
+    "    cube = np.zeros(12,dtype=int)\n",
     "    for index in edge_list:\n",
     "        cube[index] = 1\n",
     "    cube = cube.reshape((3,4))\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lets try to characterize the cube with a 3 by 4 numpy matrix"
+    "## Create a dictionary with information about all possible cube structures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cubes_info = {}\n",
+    "for n_edges in range(13):\n",
+    "    cubes_info[n_edges]={}\n",
+    "    cube_list = cubes_with_n_edges(n_edges)\n",
+    "    cubes_info[n_edges]['full list'] = cube_list\n"
    ]
   },
   {
@@ -83,359 +96,206 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# How to use the create_cube function\n",
-    "cube = create_cube([2,4])\n",
-    "print(cube)"
+    "len(cubes_info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of edges:  0 Number of cubes:  1 \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "Number of edges:  1 Number of cubes:  12 \n",
-      "\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]] \n",
-      "\n",
-      "Number of edges:  2 Number of cubes:  66 \n",
-      "\n",
-      "[[1. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[1. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[1. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]] \n",
-      "\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]] \n",
-      "\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]] \n",
-      "\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]] \n",
-      "\n",
-      "[[0. 1. 1. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 1. 0. 1.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 1. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 1. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]] \n",
-      "\n",
-      "[[0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]] \n",
-      "\n",
-      "[[0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]] \n",
-      "\n",
-      "[[0. 0. 1. 1.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 1. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 1. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]] \n",
-      "\n",
-      "[[0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]] \n",
-      "\n",
-      "[[0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 1.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 1.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [1. 1. 0. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [1. 0. 1. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [1. 0. 0. 1.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 1. 1. 0.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 1. 0. 1.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [1. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 0. 1.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 1. 1.]\n",
-      " [0. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 1. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 1.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 1. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 1. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [1. 1. 0. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [1. 0. 1. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [1. 0. 0. 1.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 1. 1. 0.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 1. 0. 1.]] \n",
-      "\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]\n",
-      " [0. 0. 1. 1.]] \n",
+      "dict_keys([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cubes_info.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'full list': [array([[1, 1, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[1, 0, 1, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[1, 0, 0, 1],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[1, 0, 0, 0],\n",
+      "       [1, 0, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[1, 0, 0, 0],\n",
+      "       [0, 1, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[1, 0, 0, 0],\n",
+      "       [0, 0, 1, 0],\n",
+      "       [0, 0, 0, 0]]), array([[1, 0, 0, 0],\n",
+      "       [0, 0, 0, 1],\n",
+      "       [0, 0, 0, 0]]), array([[1, 0, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [1, 0, 0, 0]]), array([[1, 0, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 1, 0, 0]]), array([[1, 0, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 1, 0]]), array([[1, 0, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 0, 1]]), array([[0, 1, 1, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 1, 0, 1],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 1, 0, 0],\n",
+      "       [1, 0, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 1, 0, 0],\n",
+      "       [0, 1, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 1, 0, 0],\n",
+      "       [0, 0, 1, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 1, 0, 0],\n",
+      "       [0, 0, 0, 1],\n",
+      "       [0, 0, 0, 0]]), array([[0, 1, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [1, 0, 0, 0]]), array([[0, 1, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 1, 0, 0]]), array([[0, 1, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 1, 0]]), array([[0, 1, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 0, 1]]), array([[0, 0, 1, 1],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 1, 0],\n",
+      "       [1, 0, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 1, 0],\n",
+      "       [0, 1, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 1, 0],\n",
+      "       [0, 0, 1, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 1, 0],\n",
+      "       [0, 0, 0, 1],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 1, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [1, 0, 0, 0]]), array([[0, 0, 1, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 1, 0, 0]]), array([[0, 0, 1, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 1, 0]]), array([[0, 0, 1, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 0, 1]]), array([[0, 0, 0, 1],\n",
+      "       [1, 0, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 0, 1],\n",
+      "       [0, 1, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 0, 1],\n",
+      "       [0, 0, 1, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 0, 1],\n",
+      "       [0, 0, 0, 1],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 0, 1],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [1, 0, 0, 0]]), array([[0, 0, 0, 1],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 1, 0, 0]]), array([[0, 0, 0, 1],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 1, 0]]), array([[0, 0, 0, 1],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 0, 1]]), array([[0, 0, 0, 0],\n",
+      "       [1, 1, 0, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [1, 0, 1, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [1, 0, 0, 1],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [1, 0, 0, 0],\n",
+      "       [1, 0, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [1, 0, 0, 0],\n",
+      "       [0, 1, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [1, 0, 0, 0],\n",
+      "       [0, 0, 1, 0]]), array([[0, 0, 0, 0],\n",
+      "       [1, 0, 0, 0],\n",
+      "       [0, 0, 0, 1]]), array([[0, 0, 0, 0],\n",
+      "       [0, 1, 1, 0],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 1, 0, 1],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 1, 0, 0],\n",
+      "       [1, 0, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 1, 0, 0],\n",
+      "       [0, 1, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 1, 0, 0],\n",
+      "       [0, 0, 1, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 1, 0, 0],\n",
+      "       [0, 0, 0, 1]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 1, 1],\n",
+      "       [0, 0, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 1, 0],\n",
+      "       [1, 0, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 1, 0],\n",
+      "       [0, 1, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 1, 0],\n",
+      "       [0, 0, 1, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 1, 0],\n",
+      "       [0, 0, 0, 1]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 0, 1],\n",
+      "       [1, 0, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 0, 1],\n",
+      "       [0, 1, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 0, 1],\n",
+      "       [0, 0, 1, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 0, 1],\n",
+      "       [0, 0, 0, 1]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [1, 1, 0, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [1, 0, 1, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [1, 0, 0, 1]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 1, 1, 0]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 1, 0, 1]]), array([[0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0],\n",
+      "       [0, 0, 1, 1]])]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cubes_info[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of edges:  12 ,   Number of cubes:  1 \n",
+      "\n",
+      "[[1 1 1 1]\n",
+      " [1 1 1 1]\n",
+      " [1 1 1 1]] \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for n_edges in range(3):\n",
-    "    cube_list = cubes_with_n_edges(n_edges)\n",
-    "    print ('Number of edges: ', n_edges, 'Number of cubes: ', len(cube_list), '\\n')\n",
+    "    print ('Number of edges: ', n_edges,',   Number of cubes: ', len(cube_list), '\\n')\n",
     "    for item in cube_list:\n",
     "        print(item, '\\n')"
    ]
